# static/swagger.json
@@ -166,6 +166,38 @@
         }
       }
     },
+    "/referral/track/stats/{address}": {
+      "get": {
+        "description": "Returns a referral tracking stats of the given account",
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "Vulcan"
+        ],
+        "operationId": "GetReferralTrackingStats",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/ReferralTrackingStatsResponse"
+            }
+          },
+          "404": {
+            "description": "address not found",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          },
+          "500": {
+            "description": "internal server error.",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        }
+      }
+    },
     "/register": {
       "post": {
         "consumes": [
@@ -289,6 +321,46 @@
         "code": {
           "type": "string",
           "x-go-name": "Code"
+        }
+      },
+      "x-go-package": "github.com/Decentr-net/vulcan/internal/server"
+    },
+    "ReferralTrackingStatsItem": {
+      "type": "object",
+      "title": "ReferralTrackingStatsItem ...",
+      "properties": {
+        "confirmed": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Confirmed"
+        },
+        "installed": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Installed"
+        },
+        "registered": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Registered"
+        },
+        "reward": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Reward"
+        }
+      },
+      "x-go-package": "github.com/Decentr-net/vulcan/internal/server"
+    },
+    "ReferralTrackingStatsResponse": {
+      "type": "object",
+      "title": "ReferralTrackingStatsResponse ...",
+      "properties": {
+        "last30Days": {
+          "$ref": "#/definitions/ReferralTrackingStatsItem"
+        },
+        "total": {
+          "$ref": "#/definitions/ReferralTrackingStatsItem"
         }
       },
       "x-go-package": "github.com/Decentr-net/vulcan/internal/server"
